Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Attach_Deployment_File__c.field-meta.xml
<CustomField>
    <fullName>Attach_Deployment_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach Deployment File</label>
    <type>Checkbox</type>
</CustomField>