Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Build_Task__c.field-meta.xml
<CustomField>
    <fullName>Build_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Task</label>
    <referenceTo>Build_Task__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>