Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF(Deployment_Jobs_Count__c&gt;0,
Count_Completed__c /  Deployment_Jobs_Count__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>