Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>