Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Count_Completed__c.field-meta.xml
<CustomField>
    <fullName>Count_Completed__c</fullName>
    <label># Completed</label>
    <summarizedField>Step__c.Count_Completed__c</summarizedField>
    <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>