Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Deployment_command_sent__c.field-meta.xml
<CustomField>
    <fullName>Deployment_command_sent__c</fullName>
    <label>Deployment command sent</label>
    <type>DateTime</type>
</CustomField>