Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Deployment_Completed_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Completed_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated when the Deployment Completed email has been sent to prevent subsequent notifications until this marker has been reset.</description>
    <label>Deployment Completed email sent</label>
    <type>Checkbox</type>
</CustomField>