Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Deployment_Jobs_Count__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Jobs_Count__c</fullName>
    <label>Deployment Jobs Count</label>
    <summarizedField>Step__c.Org_Count__c</summarizedField>
    <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>