Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Deployment_Last_Step__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Last_Step__c</fullName>
    <label>Deployment Last Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>