Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Do_Not_Update_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Update Promotion</label>
    <type>Checkbox</type>
</CustomField>