Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_Status__c</fullName>
    <formula>CASE( Status__c, &quot;Completed Successfully&quot;, &quot;/resource/&quot; + IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-check.png&quot;,
&quot;In progress&quot;, &quot;/img/loading.gif&quot;,
&quot;Completed with Errors&quot;, &quot;/resource/&quot; + IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-cross.png&quot;,
&quot;/resource/&quot; + IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-paused.png&quot;)</formula>
    <label>Flag Status</label>
    <type>Text</type>
</CustomField>