Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <formula>IF(NOT(ISBLANK(Promotion__r.Project__c)), Promotion__r.Project__r.Deployment_Flow__r.Git_Repository__c,  Promotion__r.Release__r.Project__r.Deployment_Flow__r.Git_Repository__c )</formula>
    <label>Git Repository</label>
    <type>Text</type>
</CustomField>