Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Paused__c.field-meta.xml
<CustomField>
    <fullName>Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to decide if there is a pending manual item on deployment.</description>
    <inlineHelpText>This field is auto populated when a manual task is pending on deployment.</inlineHelpText>
    <label>Paused</label>
    <type>Checkbox</type>
</CustomField>