Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Rolled_back_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Rolled_back_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the original deployment that was rolled back for reporting purposes</description>
    <inlineHelpText>Identifies the original deployment that was rolled back for reporting purposes</inlineHelpText>
    <label>Rolled back Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Deployments (Rolled back Deployment)</relationshipLabel>
    <relationshipName>RolledBackDeployments</relationshipName>
    <type>Lookup</type>
</CustomField>