Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deploy now</fullName>
            </value>
            <value>
                <fullName>Deploy later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>