Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Send_Deployment_Complete_email__c.field-meta.xml
<CustomField>
    <fullName>Send_Deployment_Complete_email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When the deployment completes an email will be sent to the owner of the deployment informing them of the status. Uncheck this checkbox to not receive such an email.</inlineHelpText>
    <label>Send Deployment Complete email</label>
    <type>Checkbox</type>
</CustomField>