Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Server_URL__c</fullName>
    <formula>$Api.Partner_Server_URL_260</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Server_URL</label>
    <type>Text</type>
</CustomField>