Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <formula>From_Org__r.Environment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Environment</label>
    <type>Text</type>
</CustomField>