Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/fields/SUM_Deployed__c.field-meta.xml
<CustomField>
    <fullName>SUM_Deployed__c</fullName>
    <label>SUM Deployed</label>
    <summarizedField>Step__c.SUM_Deployed__c</summarizedField>
    <summaryForeignKey>Step__c.Deployment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>