Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/recordTypes/Advanced_multi_step.recordType-meta.xml
<RecordType>
    <fullName>Advanced_multi_step</fullName>
    <active>true</active>
    <description>Create multiple types of deployment steps. (Technical knowledge needed)</description>
    <label>Advanced (multi-step)</label>
</RecordType>