Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/recordTypes/Automation_Template.recordType-meta.xml
<RecordType>
    <fullName>Automation_Template</fullName>
    <active>true</active>
    <description>Group of steps to be executed in the future.</description>
    <label>Automation Template</label>
</RecordType>