Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/recordTypes/Data_Deployment.recordType-meta.xml
<RecordType>
    <fullName>Data_Deployment</fullName>
    <active>true</active>
    <description>Select a Data Template to be deployed in a point and click process.</description>
    <label>Data Deployment</label>
</RecordType>