Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/recordTypes/Metadata_Deployment.recordType-meta.xml
<RecordType>
    <fullName>Metadata_Deployment</fullName>
    <active>true</active>
    <description>Select the metadata manually to be deployed in a point and click process.</description>
    <label>Metadata Deployment</label>
</RecordType>