Dummy_Package_for_scratch_org/main/default/objects/Deployment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>Deployed__c</columns>
    <columns>Completed__c</columns>
    <columns>From_Org__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>